k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: cspm-misconfig-mgmt-be
spec:
  type: ClusterIP
  ports:
  - port: 8000
    targetPort: 8000
    protocol: TCP
    name: http
  selector:
    app: cspm-misconfig-mgmt-be
